# simple-python-package-index

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  constraints.txt  pyproject.toml
data/: popuplate.py
package-staging/: .gitignore  downloader.py
src/pypi_simple_server/: __init__.py  config.py  database.py  dist_scanner.py  endpoint_utils.py  loader.py  main.py  models.py  utils.py
src/pypi_simple_server/dependencies/: content_negotiation.py  etag.py
src/pypi_simple_server/templates/: detail.html  index.html
src/pyps/: loader.py  main.py
src/pyps/templates/: __init__.py  index.html
src/simple_python_package_index/: __init__.py  html.py  loader.py  main.py  model.py
src/simple_python_package_index/templates/: details.html  index.html
src/sppi_server/: loader.py  main.py  model.py
src/sppi_server/templates/: index.html
tests/: conftest.py  test_database.py  test_etag.py  test_html_reponses.py  test_other_api.py  test_server.py  test_simple_api.py  test_simple_html.py  test_simple_json.py
