[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Sebastian Koslowski", email = "s.koslowski@procitec.de"},
]
dependencies = [
  "fastapi >= 0.70.0",
  "pydantic_settings",
  "airium",
  "natsort",
  "packaging",
  "furl",
  "python-multipart >= 0.0.5",
  "uvicorn[standard] >= 0.15.0",
]
description = 'Simple PEP503 index for python packages'
version = "0.0.1"
license = "MIT"
name = "python-package-server"
requires-python = ">=3.11"

[tool.black]
line-length = 100

[tool.ruff] # https://beta.ruff.rs/docs/rules
extend-select = [
  "I", # isort
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
]
line-length = 110


[tool.hatch.build.targets.wheel]
sources = ["src/pyps"]
