[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "Sebastian Koslowski", email = "s.koslowski@procitec.de"},
]
dependencies = [
  "fastapi >= 0.70.0",
  "pydantic_settings",
  "packaging",
  "jinja2 >=3.1.5",
  "python-multipart >= 0.0.5",
  "uvicorn[standard] >= 0.15.0",
  "sqlmodel>=0.0.22",
]
description = 'Simple PEP503 index for python packages'
version = "0.0.1"
license = "MIT"
name = "pypi-simple-server"
requires-python = ">=3.12"

[tool.black]
line-length = 100

[tool.ruff] # https://beta.ruff.rs/docs/rules
lint.extend-select = [
  "I", # isort
  "UP", # pyupgrade
  "PT", # flake8-pytest-style
]
line-length = 110


[tool.hatch.build.targets.wheel]
sources = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pypi-simple>=1.6.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
